# polynomial-over-finite-prime-field

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs  ops.rs
tests/: test.rs
