[package]
name = "polynomial-over-finite-prime-field"
version = "0.2.1"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "polynomial over finite prime field"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/polynomial-over-finite-prime-field/"
repository = "https://gitlab.com/Toru3/polynomial-over-finite-prime-field/"
readme = "README.md"
keywords = ["algebra", "polynomial", "modulo"]
categories = ["data-structures", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modulo-n-tools = "0.1.0"
num-traits = "0.2.14"
ring-algorithm = "0.3.0"
[features]
default = []
__internal_inject_debug = [] # DO NOT USE
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
